Bug 166664 - Cannot delete column in chart data table
Summary: Cannot delete column in chart data table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-05-20 11:32 UTC by Regina Henschel
Modified: 2025-06-16 09:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
actual erase is missing (547 bytes, patch)
2025-05-20 22:52 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-05-20 11:32:11 UTC
Start Draw in a daily build. Insert a chart and open its data table. Set cursor in third column and click on "delete column" icon.

Error: nothing happens.

Expected: Data table has only two columns.

I see the error in Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cb149972d5fc82f3ca8009c3e51931c8d94ee664
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

It is OK in Version: 25.2.1.2 (X86_64) / LibreOffice Community
Build ID: d3abf4aee5fd705e4a92bba33a32f40bc4e56f49
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 raal 2025-05-20 20:15:22 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.8.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 6b9ca66d4d10c4060280c74c4ed32f482116953f is the first bad commit
commit 6b9ca66d4d10c4060280c74c4ed32f482116953f
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Sun Apr 13 14:35:23 2025 +0200

    source 84f7b8405236dabee247c59858e54a37fa0c67c3

184097: fold DataSeriesHelper functions into ChartType | https://gerrit.libreoffice.org/c/core/+/184097
Comment 2 Regina Henschel 2025-05-20 22:52:31 UTC
Created attachment 200893 [details]
actual erase is missing

But I wonder, why there is need for a `deleteSeries` method. There exists already `removeDataSeries` method.
Comment 3 Commit Notification 2025-06-15 12:48:20 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3391dfad01efddb4bfd3b2bfef221a17ac11e43a

tdf#166664 adds missing erase in deleteSeries

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-06-16 09:29:43 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d49fc1cfb76514e300a3670f18e751c0710d81a6

tdf#166664 adds missing erase in deleteSeries

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.