tdf#166664 adds missing erase in deleteSeries

commit 84f7b840 has moved deleteSeries from DataSeriesHelper to
ChartType. But the move has lost the actual erase.

No unit test, because I don't know how to use a dialog in a test.

Change-Id: I92dc1d2bdae0fe0d63b6c3b012b50b8c66032334
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186512
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>